objects/FLODocs__FLO_Change_Request_Group__c.object
<CustomObject>
    <description>A Change Request Group holds a related set of Change Requests. For example, a Change Request Group might contain Change Requests related to a Business Unit, a functional group, or a custom application.</description>
    <fields>
        <fullName>FLODocs__Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Change Requests in this Group whose Completion Status == &quot;Completed&quot;.</description>
        <inlineHelpText>Number of Change Requests in this Group whose Completion Status == &quot;Completed&quot;.</inlineHelpText>
        <label>Completed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__In_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Change Requests in this Group whose Completion Status == &quot;In Progress&quot;.</description>
        <inlineHelpText>Number of Change Requests in this Group whose Completion Status == &quot;In Progress&quot;.</inlineHelpText>
        <label>In Progress</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Not_Started__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Change Requests in this Group whose Completion Status == &quot;Not Started&quot;.</description>
        <inlineHelpText>Number of Change Requests in this Group whose Completion Status == &quot;Not Started&quot;.</inlineHelpText>
        <label>Not Started</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of Change Requests in this Group.</description>
        <inlineHelpText>Total number of Change Requests in this Group.</inlineHelpText>
        <label>Total</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Change Request Group</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Total__c</columns>
        <columns>FLODocs__Not_Started__c</columns>
        <columns>FLODocs__In_Progress__c</columns>
        <columns>FLODocs__Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Change Request Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>